--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -90,7 +90,7 @@ install:
 ifeq ($(OS_TARGET),win32)
 
 else
-        ln -sf /usr/bin/lazarus $(LAZARUS_INSTALL_DIR)/lazarus
+        ln -sf $(LAZARUS_INSTALL_DIR)/lazarus /usr/bin/lazarus
 endif
 
 
