fixed compilation, started fpc_crosswin32 rpm
 SVN 7720@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1965,6 +1965,7 @@ tools/install/create_lazarus_export_tgz.sh -text svneol=native#application/x-sh
 tools/install/create_lazarus_rpm.sh -text svneol=native#application/x-sh
 tools/install/create_lazarus_snapshot_rpm.sh svneol=native#text/plain
 tools/install/create_lazarus_tgz_from_local_dir.sh -text svneol=native#application/x-sh
+tools/install/cross_unix/build_linux_cross_win32_rpm.sh svneol=native#text/plain
 tools/install/cross_unix/update_cross_fpc.sh svneol=native#text/plain
 tools/install/cvsexportlocal.pas svneol=native#text/pascal
 tools/install/do_nothing.sh -text svneol=native#application/x-sh
@@ -1974,6 +1975,7 @@ tools/install/get_lazarus_version.sh -text svneol=native#application/x-sh
 tools/install/macosx/fpc_installer_info.zip -text svneol=unset#application/zip
 tools/install/replace_in_files.pl -text svneol=native#application/x-perl
 tools/install/rpm/fpc.spec.template svneol=native#text/plain
+tools/install/rpm/fpc_crosswin32.spec.template svneol=native#text/plain
 tools/install/rpm/lazarus.spec.template svneol=native#text/plain
 tools/install/setup.sh -text svneol=native#application/x-sh
 tools/install/smart_strip.sh -text svneol=native#application/x-sh
