--- a/.gitattributes
+++ b/.gitattributes
@@ -1974,6 +1974,7 @@ tools/install/file_filter.sh -text svneol=native#application/x-sh
 tools/install/get_lazarus_version.sh -text svneol=native#application/x-sh
 tools/install/macosx/fpc_installer_info.zip -text svneol=unset#application/zip
 tools/install/replace_in_files.pl -text svneol=native#application/x-perl
+tools/install/rpm/create_nonroot_rpmmacros.sh svneol=native#text/plain
 tools/install/rpm/fpc.spec.template svneol=native#text/plain
 tools/install/rpm/fpc_crosswin32.spec.template svneol=native#text/plain
 tools/install/rpm/lazarus.spec.template svneol=native#text/plain
