updated cross compilation hints
 SVN 7725@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1965,6 +1965,7 @@ tools/install/create_lazarus_export_tgz.sh -text svneol=native#application/x-sh
 tools/install/create_lazarus_rpm.sh -text svneol=native#application/x-sh
 tools/install/create_lazarus_snapshot_rpm.sh svneol=native#text/plain
 tools/install/create_lazarus_tgz_from_local_dir.sh -text svneol=native#application/x-sh
+tools/install/cross_unix/HowToCreate_fpc_crosswin32_rpm.txt svneol=native#text/plain
 tools/install/cross_unix/build_linux_cross_win32_rpm.sh svneol=native#text/plain
 tools/install/cross_unix/update_cross_fpc.sh svneol=native#text/plain
 tools/install/cvsexportlocal.pas svneol=native#text/pascal
