--- a/.gitattributes
+++ b/.gitattributes
@@ -833,6 +833,8 @@ ide/editoroptions.pp svneol=native#text/pascal
 ide/encloseselectiondlg.lfm svneol=native#text/plain
 ide/encloseselectiondlg.lrs svneol=native#text/pascal
 ide/encloseselectiondlg.pas svneol=native#text/pascal
+ide/environmentopts.lfm svneol=native#text/plain
+ide/environmentopts.lrs svneol=native#text/plain
 ide/environmentopts.pp svneol=native#text/pascal
 ide/extractprocdlg.lfm svneol=native#text/plain
 ide/extractprocdlg.lrs svneol=native#text/pascal
