--- a/.gitattributes
+++ b/.gitattributes
@@ -916,6 +916,7 @@ ide/publishmodule.pas svneol=native#text/pascal
 ide/publishprojectdlg.lfm svneol=native#text/plain
 ide/publishprojectdlg.lrs svneol=native#text/pascal
 ide/publishprojectdlg.pas svneol=native#text/pascal
+ide/revision.inc svneol=native#text/plain
 ide/runparamsopts.pas svneol=native#text/pascal
 ide/searchresultview.lfm svneol=native#text/plain
 ide/searchresultview.lrs svneol=native#text/pascal
