renamed TSpinEdit to TFloatSpinEdit and added new TSpinEdit with integers
 SVN 7781@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -234,6 +234,7 @@ components/rtticontrols/ttichecklistbox.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/tticolorbutton.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/tticombobox.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/ttiedit.xpm -text svneol=native#image/x-xpixmap
+components/rtticontrols/ttifloatspinedit.xpm svneol=native#text/plain
 components/rtticontrols/ttigrid.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/ttigroupbox.xpm -text svneol=native#image/x-xpixmap
 components/rtticontrols/ttiimage.xpm -text svneol=native#image/x-xpixmap
@@ -1121,6 +1122,7 @@ images/components/teditbutton.xpm -text svneol=native#image/x-xpixmap
 images/components/tfilelistbox.xpm -text svneol=native#image/x-xpixmap
 images/components/tfilenamedit.xpm -text svneol=native#image/x-xpixmap
 images/components/tfilenameedit.xpm -text svneol=native#image/x-xpixmap
+images/components/tfloatspinedit.xpm svneol=native#text/plain
 images/components/tfontdialog.ico -text svneol=unset#image/x-icon
 images/components/tfontdialog.xpm -text svneol=native#image/x-xpixmap
 images/components/tgroupbox.ico -text svneol=unset#image/x-icon
