implemented creating Makefile for packages
 SVN 7816@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -199,6 +199,8 @@ components/projecttemplates/idetemplateproject.pp svneol=native#text/plain
 components/projecttemplates/projecttemplates.pp svneol=native#text/plain
 components/projecttemplates/projtemplates.lpk svneol=native#text/plain
 components/projecttemplates/projtemplates.pas svneol=native#text/plain
+components/rtticontrols/Makefile svneol=native#text/plain
+components/rtticontrols/Makefile.fpc svneol=native#text/plain
 components/rtticontrols/baseicon.png -text svneol=unset#image/png
 components/rtticontrols/examples/example1.lfm svneol=native#text/plain
 components/rtticontrols/examples/example1.lrs svneol=native#text/pascal
