--- a/.gitattributes
+++ b/.gitattributes
@@ -776,6 +776,7 @@ ide/aboutfrm.lrs svneol=native#text/pascal
 ide/aboutfrm.pas svneol=native#text/pascal
 ide/addtoprojectdlg.pas svneol=native#text/pascal
 ide/basedebugmanager.pas svneol=native#text/pascal
+ide/bigidemake.cfg svneol=native#text/plain
 ide/buildfiledlg.lfm svneol=native#text/plain
 ide/buildfiledlg.lrs svneol=native#text/pascal
 ide/buildfiledlg.pas svneol=native#text/pascal
@@ -936,6 +937,7 @@ ide/splash.pp svneol=native#text/pascal
 ide/startlazarus.lpr svneol=native#text/pascal
 ide/startlazarus.rc svneol=native#text/plain
 ide/startlazopts.pas svneol=native#text/pascal
+ide/staticpackages.inc svneol=native#text/plain
 ide/sysvaruseroverridedlg.pas svneol=native#text/pascal
 ide/todolist.pp svneol=native#text/pascal
 ide/transfermacros.pp svneol=native#text/pascal
