--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -86,9 +86,9 @@ LAZARUS_OPT=$(LAZARUS_LIBPATHS)
 #
 # big ide
 ifdef LAZARUS_BIG
-LAZARUS_IDE_CONFIG=bigidemake.cfg
-LAZARUS_CONFIG_DIR=.
-LAZARUS_BIG_COMPONENT_DIRS=rtticontrols
+#LAZARUS_IDE_CONFIG=bigidemake.cfg
+#LAZARUS_CONFIG_DIR=.
+#LAZARUS_BIG_COMPONENT_DIRS=rtticontrols
 endif
 
 #
