fixed constant declaration in revision.inc
 SVN 7856@trunk

--- a/tools/svn2revisioninc.lpi
+++ b/tools/svn2revisioninc.lpi
@@ -12,46 +12,46 @@
     <LazDoc Paths=""/>
     <Units Count="11">
       <Unit0>
-        <CursorPos X="70" Y="100"/>
+        <CursorPos X="26" Y="111"/>
         <EditorIndex Value="0"/>
         <Filename Value="svn2revisioninc.pas"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
-        <TopLine Value="83"/>
+        <TopLine Value="92"/>
         <UnitName Value="Svn2RevisionInc"/>
-        <UsageCount Value="23"/>
+        <UsageCount Value="25"/>
       </Unit0>
       <Unit1>
         <CursorPos X="13" Y="8"/>
         <Filename Value="C:\lazarus\source\fpc\2.1\fcl\inc\process.pp"/>
         <TopLine Value="1"/>
         <UnitName Value="process"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="10"/>
       </Unit1>
       <Unit2>
         <CursorPos X="1" Y="426"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="4"/>
         <Filename Value="updatepofiles.pas"/>
         <Loaded Value="True"/>
-        <TopLine Value="118"/>
+        <TopLine Value="1"/>
         <UnitName Value="UpdatePoFiles"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="13"/>
       </Unit2>
       <Unit3>
         <CursorPos X="22" Y="41"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="3"/>
         <Filename Value="C:\lazarus\source\lazarus\lcl\fileutil.pas"/>
         <Loaded Value="True"/>
-        <TopLine Value="14"/>
+        <TopLine Value="1"/>
         <UnitName Value="FileUtil"/>
-        <UsageCount Value="12"/>
+        <UsageCount Value="13"/>
       </Unit3>
       <Unit4>
         <CursorPos X="3" Y="5335"/>
         <Filename Value="C:\lazarus\source\lazarus\lcl\grids.pas"/>
         <TopLine Value="5330"/>
         <UnitName Value="Grids"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="9"/>
       </Unit4>
       <Unit5>
         <CursorPos X="33" Y="63"/>
@@ -69,12 +69,12 @@
       </Unit6>
       <Unit7>
         <CursorPos X="3" Y="31"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="2"/>
         <Filename Value="C:\lazarus\source\fpc\2.0\fcl\inc\pipes.pp"/>
         <Loaded Value="True"/>
         <TopLine Value="14"/>
         <UnitName Value="Pipes"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="12"/>
       </Unit7>
       <Unit8>
         <CursorPos X="3" Y="180"/>
@@ -84,9 +84,7 @@
       </Unit8>
       <Unit9>
         <CursorPos X="1" Y="1"/>
-        <EditorIndex Value="2"/>
         <Filename Value="C:\lazarus\source\fpc\2.0\fcl\xml\xmlread.pp"/>
-        <Loaded Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="XMLRead"/>
         <UsageCount Value="10"/>
@@ -94,11 +92,11 @@
       <Unit10>
         <CursorPos X="15" Y="204"/>
         <EditorIndex Value="1"/>
-        <Filename Value="C:\lazarus\source\fpc\2.0\fcl\xml\DOM.pp"/>
+        <Filename Value="C:\lazarus\source\fpc\2.0\fcl\xml\dom.pp"/>
         <Loaded Value="True"/>
         <TopLine Value="200"/>
         <UnitName Value="DOM"/>
-        <UsageCount Value="10"/>
+        <UsageCount Value="11"/>
       </Unit10>
     </Units>
     <PublishOptions>
@@ -121,7 +119,7 @@
         <PackageName Value="FCL"/>
       </Item2>
     </RequiredPackages>
-    <JumpHistory Count="24" HistoryIndex="23">
+    <JumpHistory Count="7" HistoryIndex="6">
       <Position1>
         <Filename Value="C:\lazarus\source\lazarus\lcl\FileUtil.pas"/>
         <Caret Line="46" Column="30" TopLine="29"/>
@@ -131,93 +129,25 @@
         <Caret Line="47" Column="40" TopLine="30"/>
       </Position2>
       <Position3>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="1" Column="1" TopLine="27"/>
-      </Position3>
-      <Position4>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="75" Column="11" TopLine="58"/>
-      </Position4>
-      <Position5>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="89" Column="24" TopLine="64"/>
-      </Position5>
-      <Position6>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="110" Column="14" TopLine="79"/>
-      </Position6>
-      <Position7>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="66" Column="45" TopLine="49"/>
-      </Position7>
-      <Position8>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="71" Column="14" TopLine="54"/>
-      </Position8>
-      <Position9>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="61" Column="16" TopLine="54"/>
-      </Position9>
-      <Position10>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="77" Column="74" TopLine="60"/>
-      </Position10>
-      <Position11>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="78" Column="31" TopLine="64"/>
-      </Position11>
-      <Position12>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="70" Column="16" TopLine="61"/>
-      </Position12>
-      <Position13>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="47" Column="42" TopLine="30"/>
-      </Position13>
-      <Position14>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="93" Column="28" TopLine="62"/>
-      </Position14>
-      <Position15>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="89" Column="22" TopLine="72"/>
-      </Position15>
-      <Position16>
         <Filename Value="C:\lazarus\source\fpc\2.0\fcl\xml\DOM.pp"/>
         <Caret Line="208" Column="34" TopLine="179"/>
-      </Position16>
-      <Position17>
+      </Position3>
+      <Position4>
         <Filename Value="C:\lazarus\source\fpc\2.0\fcl\xml\DOM.pp"/>
         <Caret Line="52" Column="13" TopLine="35"/>
-      </Position17>
-      <Position18>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="88" Column="21" TopLine="72"/>
-      </Position18>
-      <Position19>
+      </Position4>
+      <Position5>
         <Filename Value="C:\lazarus\source\fpc\2.0\fcl\xml\DOM.pp"/>
         <Caret Line="382" Column="31" TopLine="365"/>
-      </Position19>
-      <Position20>
+      </Position5>
+      <Position6>
         <Filename Value="C:\lazarus\source\fpc\2.0\fcl\xml\DOM.pp"/>
         <Caret Line="353" Column="38" TopLine="349"/>
-      </Position20>
-      <Position21>
+      </Position6>
+      <Position7>
         <Filename Value="C:\lazarus\source\fpc\2.0\fcl\xml\DOM.pp"/>
         <Caret Line="245" Column="37" TopLine="241"/>
-      </Position21>
-      <Position22>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="99" Column="46" TopLine="72"/>
-      </Position22>
-      <Position23>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="98" Column="98" TopLine="80"/>
-      </Position23>
-      <Position24>
-        <Filename Value="svn2revisioninc.pas"/>
-        <Caret Line="100" Column="64" TopLine="83"/>
-      </Position24>
+      </Position7>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
