added svn2revisioninc to the makefiles
 SVN 7862@trunk

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -340,103 +340,103 @@ ifeq ($(FULL_TARGET),arm-linux)
 override TARGET_DIRS+=apiwizz
 endif
 ifeq ($(FULL_TARGET),i386-linux)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-go32v2)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-win32)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-os2)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-freebsd)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-beos)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-netbsd)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-solaris)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-qnx)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-netware)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-openbsd)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-wdosx)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-emx)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-watcom)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-netwlibc)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),m68k-linux)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),m68k-freebsd)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),m68k-netbsd)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),m68k-amiga)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),m68k-atari)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),m68k-openbsd)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),m68k-palmos)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),powerpc-linux)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),powerpc-netbsd)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),powerpc-macos)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),powerpc-darwin)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),powerpc-morphos)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),sparc-linux)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),sparc-netbsd)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),sparc-solaris)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),x86_64-linux)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),x86_64-freebsd)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),arm-linux)
-override TARGET_PROGRAMS+=lazres updatepofiles
+override TARGET_PROGRAMS+=lazres svn2revisioninc updatepofiles
 endif
 ifeq ($(FULL_TARGET),i386-linux)
 override COMPILER_OPTIONS+=-gl
@@ -2909,4 +2909,5 @@ endif
 .PHONY: all
 all: apiwizz_all
 	$(MAKE) --assume-new=lazres.pp lazres$(EXEEXT)
+	$(MAKE) --assume-new=svn2revisioninc.pas svn2revisioninc.pas$(EXEEXT)
 	$(MAKE) --assume-new=updatepofiles.pas updatepofiles$(EXEEXT)
