fixed compiling jitfom to IDE units directory
 SVN 7864@trunk

--- a/designer/jitform/Makefile.fpc
+++ b/designer/jitform/Makefile.fpc
@@ -9,7 +9,7 @@ version=0.9b
 
 [compiler]
 unitdir=../../lcl/units/$(CPU_TARGET)-$(OS_TARGET) .
-unittargetdir=../units
+unittargetdir=../../units/$(CPU_TARGET)-$(OS_TARGET)
 options=-gl
 
 [target]
