--- a/.gitattributes
+++ b/.gitattributes
@@ -438,6 +438,7 @@ designer/designer.pp svneol=native#text/pascal
 designer/designermenu.pp svneol=native#text/pascal
 designer/designerprocs.pas svneol=native#text/pascal
 designer/filesystem.pp svneol=native#text/pascal
+designer/jitform/README.TXT svneol=native#text/plain
 designer/jitform/jitform.pas svneol=native#text/pascal
 designer/jitforms.pp svneol=native#text/pascal
 designer/menueditorform.pas svneol=native#text/pascal
