--- a/.gitattributes
+++ b/.gitattributes
@@ -642,7 +642,9 @@ examples/barchart/frmmain.lfm svneol=native#text/plain
 examples/barchart/frmmain.lrs svneol=native#text/pascal
 examples/barchart/frmmain.pas svneol=native#text/pascal
 examples/bitbtnform.pp svneol=native#text/pascal
+examples/bitbutton.lpi svneol=native#text/plain
 examples/bitbutton.pp svneol=native#text/pascal
+examples/checkbox.lpi svneol=native#text/plain
 examples/checkbox.pp svneol=native#text/pascal
 examples/codepageconverter/codepages.ini svneol=native#text/plain
 examples/codepageconverter/filefind/filefind.lrs svneol=native#text/pascal
@@ -660,7 +662,9 @@ examples/codepageconverter/mainunit.lrt svneol=native#text/plain
 examples/codepageconverter/mainunit.pas svneol=native#text/pascal
 examples/codepageconverter/mainunit.po svneol=native#text/plain
 examples/codepageconverter/mainunit.ru_RU.UTF-8.po svneol=native#text/plain
+examples/combobox.lpi svneol=native#text/plain
 examples/combobox.pp svneol=native#text/pascal
+examples/comdialogs.lpi svneol=native#text/plain
 examples/comdialogs.pp svneol=native#text/pascal
 examples/dlgform.pp svneol=native#text/pascal
 examples/easter/about.lfm svneol=native#text/plain
@@ -671,6 +675,7 @@ examples/easter/holyday.lpr svneol=native#text/pascal
 examples/easter/main.lfm svneol=native#text/plain
 examples/easter/main.lrs svneol=native#text/pascal
 examples/easter/main.pas svneol=native#text/pascal
+examples/edittest.lpi svneol=native#text/plain
 examples/edittest.pp svneol=native#text/pascal
 examples/grid_semaphor/TSemaphorDBGrid.xpm -text svneol=native#image/x-xpixmap
 examples/grid_semaphor/example/project1.lpi svneol=native#text/plain
@@ -690,7 +695,9 @@ examples/grid_semaphor/semaphorgridlpk.pas svneol=native#text/pascal
 examples/grid_semaphor/semaphorgrids.pas svneol=native#text/pascal
 examples/grid_semaphor/semaphorgridsicon.lrs svneol=native#text/pascal
 examples/grid_semaphor/tsemaphorgrid.xpm -text svneol=native#image/x-xpixmap
+examples/groupbox.lpi svneol=native#text/plain
 examples/groupbox.pp svneol=native#text/pascal
+examples/groupboxnested.lpi svneol=native#text/plain
 examples/groupboxnested.pas svneol=native#text/pascal
 examples/gtkglarea/data/particle.bmp -text svneol=unset#image/bmp
 examples/gtkglarea/data/texture1.bmp -text svneol=unset#image/bmp
@@ -699,6 +706,7 @@ examples/gtkglarea/data/texture3.bmp -text svneol=unset#image/bmp
 examples/gtkglarea/exampleform.pp svneol=native#text/pascal
 examples/gtkglarea/gtkglarea_demo.lpi svneol=native#text/plain
 examples/gtkglarea/gtkglarea_demo.pp svneol=native#text/pascal
+examples/hello.lpi svneol=native#text/plain
 examples/hello.pp svneol=native#text/pascal
 examples/helloform.pp svneol=native#text/pascal
 examples/imgviewer/file.bmp -text svneol=native#image/bmp
@@ -716,17 +724,24 @@ examples/lazintfimage/fadein1.lpr svneol=native#text/pascal
 examples/lazintfimage/mainunit1.lfm svneol=native#text/plain
 examples/lazintfimage/mainunit1.lrs svneol=native#text/pascal
 examples/lazintfimage/mainunit1.pas svneol=native#text/pascal
+examples/listboxtest.lpi svneol=native#text/plain
 examples/listboxtest.pp svneol=native#text/pascal
 examples/listview/listview.lpr svneol=native#text/pascal
 examples/listview/testform.lfm svneol=native#text/plain
 examples/listview/testform.lrs svneol=native#text/pascal
 examples/listview/testform.pp svneol=native#text/pascal
+examples/listviewtest.lpi svneol=native#text/plain
 examples/listviewtest.pp svneol=native#text/pascal
+examples/loadpicture.lpi svneol=native#text/plain
 examples/loadpicture.pas svneol=native#text/pascal
+examples/memotest.lpi svneol=native#text/plain
 examples/memotest.pp svneol=native#text/pascal
+examples/messagedialogs.lpi svneol=native#text/plain
 examples/messagedialogs.pp svneol=native#text/pascal
+examples/notebk.lpi svneol=native#text/plain
 examples/notebk.pp svneol=native#text/pascal
 examples/notebku.pp svneol=native#text/pascal
+examples/notebooktest.lpi svneol=native#text/plain
 examples/notebooktest.pp svneol=native#text/pascal
 examples/objectinspector/mainunit.lfm svneol=native#text/plain
 examples/objectinspector/mainunit.lrs svneol=native#text/pascal
@@ -738,10 +753,13 @@ examples/postscript/samplepostscriptcanvas.lpr svneol=native#text/pascal
 examples/postscript/usamplepostscriptcanvas.lfm svneol=native#text/plain
 examples/postscript/usamplepostscriptcanvas.lrs svneol=native#text/pascal
 examples/postscript/usamplepostscriptcanvas.pas svneol=native#text/pascal
+examples/progressbar.lpi svneol=native#text/plain
 examples/progressbar.pp svneol=native#text/pascal
+examples/scrollbar.lpi svneol=native#text/plain
 examples/scrollbar.pp svneol=native#text/pascal
 examples/selection.pp svneol=native#text/pascal
 examples/selectionform.pp svneol=native#text/pascal
+examples/speedtest.lpi svneol=native#text/plain
 examples/speedtest.pp svneol=native#text/pascal
 examples/sprites/playground.lfm svneol=native#text/plain
 examples/sprites/playground.lrs svneol=native#text/pascal
@@ -749,12 +767,17 @@ examples/sprites/playground.pas svneol=native#text/pascal
 examples/sprites/spriteexample.lpi svneol=native#text/plain
 examples/sprites/spriteexample.lpr svneol=native#text/pascal
 examples/synchronize.pp svneol=native#text/pascal
+examples/synedit1.lpi svneol=native#text/plain
 examples/synedit1.pas svneol=native#text/pascal
+examples/taborder.lpi svneol=native#text/plain
 examples/taborder.pas svneol=native#text/pascal
+examples/testall.lpi svneol=native#text/plain
 examples/testall.pp svneol=native#text/pascal
 examples/testallform.pp svneol=native#text/pascal
 examples/testtools.inc svneol=native#text/pascal
+examples/toolbar.lpi svneol=native#text/plain
 examples/toolbar.pp svneol=native#text/pascal
+examples/trackbar.lpi svneol=native#text/plain
 examples/trackbar.pp svneol=native#text/pascal
 examples/treeview/TV_Add_Remove.dpr svneol=native#text/pascal
 examples/treeview/TV_Add_Remove.res svneol=native#unset
