added example package registering a IDE mennu item to show all IDE menus in a treeview  from Michael VC
 SVN 7874@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -677,6 +677,12 @@ examples/easter/main.lrs svneol=native#text/pascal
 examples/easter/main.pas svneol=native#text/pascal
 examples/edittest.lpi svneol=native#text/plain
 examples/edittest.pp svneol=native#text/pascal
+examples/exploremenu/README.TXT svneol=native#text/plain
+examples/exploremenu/exploreidemenu.lpk svneol=native#text/plain
+examples/exploremenu/exploreidemenu.pas svneol=native#text/plain
+examples/exploremenu/frmexploremenu.lfm svneol=native#text/plain
+examples/exploremenu/frmexploremenu.lrs svneol=native#text/plain
+examples/exploremenu/frmexploremenu.pas svneol=native#text/plain
 examples/grid_semaphor/TSemaphorDBGrid.xpm -text svneol=native#image/x-xpixmap
 examples/grid_semaphor/example/project1.lpi svneol=native#text/plain
 examples/grid_semaphor/example/project1.lpr svneol=native#text/pascal
